<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.logistics.LogisticsFragment">

    <Button
        android:id="@+id/buttonDataVis"
        android:layout_width="231dp"
        android:layout_height="57dp"
        android:text="@string/allocated_vs_planned_days"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button_eclipse_brown"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
    />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewGraph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:elevation="10dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintTop_toBottomOf="@id/buttonDataVis">


        <!--Linear layout to display pie chart -->
        <!-- and details of pie chart-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="167dp"
            android:background="@drawable/table_sky"
            android:orientation="horizontal"
            android:weightSum="2">

            <!--Pie chart to display the data-->

            <org.eazegraph.lib.charts.PieChart
                android:id="@+id/piechart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:padding="6dp"
                />

            <!--Creating another linear layout -->
            <!-- to display pie chart details -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical">

                    <!--View to display the yellow color icon-->
                    <View
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:background="@color/allocatedDays" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/allocated_days" />

                </LinearLayout>

                <!--Linear layout to display planned days-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp">

                    <View
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:background="@color/plannedDays" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/planned_days" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_contributors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contributors"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardViewGraph"
        app:layout_constraintVertical_bias="0.196" />

    <ListView
        android:id="@+id/contributors_list"
        android:layout_width="395dp"
        android:layout_height="147dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/table_sky_evening"
        app:layout_constraintTop_toBottomOf="@id/text_contributors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.004">
    </ListView>

    <TableLayout
        android:id="@+id/tableLayout_add_contributor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@drawable/table_sky_evening"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contributors_list"
        app:layout_constraintBottom_toTopOf="@id/button_add_contributors">

        <!-- Title -->
        <TableRow
            android:layout_gravity="center">
            <TextView
                android:id="@+id/title_add_contributor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Add Contributor"
                android:textSize="24sp"
                android:textStyle="bold"
                android:paddingBottom="8dp"/>
        </TableRow>

        <!-- Edit Text for Contributor Name -->
        <TableRow
            android:layout_gravity="center">
            <EditText
                android:id="@+id/editText_contributor_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter contributor username"
                android:padding="8dp"
                android:gravity="center"/>          <!-- Center the text inside EditText -->
        </TableRow>

        <!-- Add and Cancel Buttons -->
        <TableRow
            android:layout_gravity="center"
            android:paddingTop="8dp">

            <Button
                android:id="@+id/button_add_contributor"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="Add"
                android:textColor="@android:color/white"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_eclipse_brown"/>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:id="@+id/tableLayoutNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@drawable/table_notes"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_contributors"
        app:layout_constraintBottom_toTopOf="@id/button_notes"
        app:layout_constraintVertical_bias="0.2"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Notes"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingBottom="8dp"/>
        <!-- ListView to display notes -->
        <ListView
            android:id="@+id/listViewNotes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp" />

        <!-- EditText and Button for adding a new note -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <EditText
                android:id="@+id/editTextNewNote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Add a new note"
                app:layout_constraintBottom_toTopOf="parent" />

            <Button
                android:id="@+id/buttonAddNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_eclipse_brown"
                android:textColor="@color/white"
                android:text="Add" />
        </TableRow>
    </TableLayout>

    <ImageButton
        android:id="@+id/button_add_contributors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_eclipse_brown"
        android:contentDescription="Add Contributors"
        android:src="@drawable/button_add_contributors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/button_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/button_eclipse_brown"
        android:contentDescription="Add Contributors"
        android:src="@drawable/button_notes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>